fix: scrollbar style

--- a/client/src/style/global.css
+++ b/client/src/style/global.css
@@ -1,5 +1,27 @@
 @import "tailwindcss";
 @theme {
-    --font-inter: Inter, sans-serif;
-    --breakpoint-3xl: 1921px;
+  --font-inter: Inter, sans-serif;
+  --breakpoint-3xl: 1921px;
+}
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar-button {
+    display: none;
   }
+  .no-scrollbar::-webkit-scrollbar {
+    width: 7px;
+    background-color: transparent; /* or add it to the track */
+  }
+  .no-scrollbar::-webkit-scrollbar-thumb {
+    background: #92410ea8;
+    opacity: 10%;
+    border-radius: 7px;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: 20px; /* Firefox */
+    overflow: auto;
+  }
+}
